# exchange-monitor

./: .env.example  .gitignore  README.md  compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/trillia_monitor/: __main__.py  config.py
backend/src/trillia_monitor/application/ports/: rate_provider.py  rate_repository.py
backend/src/trillia_monitor/application/use_cases/: collect_rate.py  get_latest_rate.py  get_rate_history.py  list_pairs.py
backend/src/trillia_monitor/domain/: entities.py  exceptions.py  value_objects.py
backend/src/trillia_monitor/infrastructure/api/: app.py  dependencies.py  errors.py  middleware.py  openapi.py  schemas.py
backend/src/trillia_monitor/infrastructure/migrations/: env.py
backend/src/trillia_monitor/infrastructure/observability/: logging.py  metrics.py
backend/src/trillia_monitor/infrastructure/persistence/: mappers.py  models.py  repositories.py  session.py
backend/src/trillia_monitor/infrastructure/providers/: awesomeapi_client.py  awesomeapi_provider.py  awesomeapi_schema.py  exceptions.py
backend/src/trillia_monitor/infrastructure/scheduler/: collect.py  worker.py
backend/tests/integration/: conftest.py  test_rate_repository.py
backend/tests/unit/: test_config.py  test_main.py
backend/tests/unit/application/: test_ports.py
backend/tests/unit/application/use_cases/: fakes.py  test_collect_rate.py  test_get_latest_rate.py  test_get_rate_history.py  test_list_pairs.py
backend/tests/unit/domain/: test_currency_pair.py  test_exceptions.py  test_exchange_rate.py
backend/tests/unit/infrastructure/api/: test_app.py  test_error_handlers.py  test_middleware.py  test_routers.py  test_schemas.py
backend/tests/unit/infrastructure/observability/: test_logging.py  test_metrics.py
backend/tests/unit/infrastructure/persistence/: test_mappers.py  test_models.py  (+1 more)
(+71 files in other folders)
