[project]
name = "trillia-exchange-monitor"
version = "1.0.0"
description = "Continuous BRL/USD exchange rate monitor."
authors = [{ name = "Matheus" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "tenacity>=8.5",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "freezegun>=1.5",
    "aiosqlite>=0.20",
]

[project.scripts]
trillia-monitor = "trillia_monitor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["src/trillia_monitor/infrastructure/migrations/versions"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.coverage.run]
# Exclude boilerplate/superseded code from coverage measurement:
# - Alembic migration scripts are generated boilerplate, not unit-tested.
# - The APScheduler worker is superseded by the Airflow orchestrator (ADR-0009),
#   kept only as a documented local alternative.
omit = [
    "*/migrations/*",
    "*/scheduler/worker.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
